# ic-verity-demo

./: .gitignore  Cargo.toml  Dockerfile  PROXY_README.md  README.md  config.env.example  dfx.json  docker-compose.yml  package.json  start-proxy.sh  target-nginx.conf  test-proxy.js
api/: index.ts
canister/: Cargo.toml  canister.did  lib.rs
