[package]
name = "canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.19.0-beta.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
